--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="sidebar">
@@ -54,22 +56,30 @@
         </div>
         <div class="right">
             <div class="header">
-                <img src="images/magnify.png" alt="Search" style="height: 20px;">
-                <input type="details" id="textarea" name="details">
-                <img src="images/bell-ring-outline.png" alt="Notification" style="right: 17%;">
-                <img src="images/profile_pic.png" alt="Profile" style="right: 13%; height: 35px; border-radius: 100%; top: 2%;">
-                <h1 style="display: inline; font-size: 1.5em; top: 0.7%; right: 0.9%; position: fixed;">Krish Maniyar</h1>
-                <div class="container1">
+                <div class="firstline">
                     <div class="image">
-                        <img src="images/profile_pic.png" alt="Profile" style="height: 40px;" id="profile_pic">
+                        <img src="images/magnify.png">
                     </div>
-                    <div class="Details">
-                        <p>
-                            Hi there,
-                        </p>
-                        <h2>
-                            Krish Maniyar(@Krish)
-                        </h2>
+                    <div class="textarea">
+                        <input type="text">
+                    </div>
+                    <div class="image">
+                        <img src="images/bell-ring-outline.png" alt="notification">
+                    </div>
+                    <div class="profile_pic">
+                        <img src="images/profile_pic.png" alt="Profile" style="max-width: 35px;">
+                    </div>
+                    <div class="name">
+                        <h3>Krish Maniyar</h3>
+                    </div>
+                </div>
+                <div class="secondline">
+                    <div class="profile_pic">
+                        <img src="images/profile_pic.png" alt="Profile" style="max-width: 60px;">
+                    </div>
+                    <div class="information" style="font-size: 1.2em;">
+                        <p>Hi there,</p>
+                        <h3>Krish Maniyar(@KBM)</h3>
                     </div>
                     <div class="buttons">
                         <button>New</button>
@@ -82,8 +92,142 @@
                     </div>
                 </div>
             </div>
+            <div class="main">
+                <div class="container1">
+                    <div class="contleft">
+                        <h3>Your Projects</h3>
+                        <br>
+                        <div class="container2">
+                            <div class="elements">
+                                <h3>Super Cool Project</h3>
+                                <p>
+                                    Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis
+                                    felis accumsan nec.
+                                </p>
+                                <img src="images/source-fork.png" alt="Fork">
+                                <img src="images/eye-plus-outline.png" alt="See">
+                                <img src="images/star-plus-outline.png" alt="Star">
+                            </div>
+                            <div class="elements">
+                                <h3>Less Cool Project</h3>
+                                <p>
+                                    Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor
+                                    tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut
+                                    sapien in, varius pellentesque lacus. </p>
+                                <img src="images/source-fork.png" alt="Fork">
+                                <img src="images/eye-plus-outline.png" alt="See">
+                                <img src="images/star-plus-outline.png" alt="Star">
+                            </div>
+                            <div class="elements">
+                                <h3>Impossible App</h3>
+                                <p>
+                                    In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit
+                                    sagittis id.
+                                </p>
+                                <img src="images/source-fork.png" alt="Fork">
+                                <img src="images/eye-plus-outline.png" alt="See">
+                                <img src="images/star-plus-outline.png" alt="Star">
+                            </div>
+                            <div class="elements">
+                                <h3>Easy Peasy App</h3>
+                                <p>
+                                    Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan
+                                    aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.
+                                </p>
+                                <img src="images/source-fork.png" alt="Fork">
+                                <img src="images/eye-plus-outline.png" alt="See">
+                                <img src="images/star-plus-outline.png" alt="Star">
+                            </div>
+                            <div class="elements">
+                                <h3>Ad Blocker</h3>
+                                <p>
+                                    Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra
+                                    hendrerit felis. Aliquam sed malesuada eros.
+                                </p>
+                                <img src="images/source-fork.png" alt="Fork">
+                                <img src="images/eye-plus-outline.png" alt="See">
+                                <img src="images/star-plus-outline.png" alt="Star">
+                            </div>
+                            <div class="elements">
+                                <h3>Money Maker</h3>
+                                <p>
+                                    Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac
+                                    scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.
+                                </p>
+                                <img src="images/source-fork.png" alt="Fork">
+                                <img src="images/eye-plus-outline.png" alt="See">
+                                <img src="images/star-plus-outline.png" alt="Star">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contright">
+                        <h3>Announcements</h3>
+                        <br>
+                        <div class="container2">
+                            <div class="elements" style="border: 0px;">
+                                <strong>Site Maintenance</strong>
+                                <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit
+                                    sodales congue...</p>
+                            </div>
+                            <div class="elements">
+                                <strong>Community Share Day</strong>
+                                <p>
+                                    Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan
+                                    porttitor...
+                                </p>
+                            </div>
+                            <div class="elements">
+                                <strong>Updated Privacy Policy</strong>
+                                <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras
+                                    fringilla sagittis sem in mattis...</p>
+                            </div>
+                        </div>
+                        <br>
+                        <h3>Trending</h3>
+                        <br>
+                        <div class="container3">
+                            <div class="elements">
+                                <div class="cont3left">
+                                    <img src="images/profile_pic.png" alt="Person1">
+                                </div>
+                                <div class="cont3right">
+                                    <h3>@KBM</h3>
+                                    <p>Super Cool Project</p>
+                                </div>
+                            </div>
+                            <div class="elements">
+                                <div class="cont3left">
+                                    <img src="images/profile_pic2.png" alt="Person2">
+                                </div>
+                                <div class="cont3right">
+                                    <h3>@Mokash</h3>
+                                    <p>World Peace Builder</p>
+                                </div>
+                            </div>
+                            <div class="elements">
+                                <div class="cont3left">
+                                    <img src="images/profile_pic3.png" alt="Person3">
+                                </div>
+                                <div class="cont3right">
+                                    <h3>@Anshul</h3>
+                                    <p>Life Changing App</p>
+                                </div>
+                            </div>
+                            <div class="elements">
+                                <div class="cont3left">
+                                    <img src="images/profile_pic4.png" alt="Person4">
+                                </div>
+                                <div class="cont3right">
+                                    <h3>@Bot</h3>
+                                    <p>No Traffic Maker</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <script src="javascript.js"></script>
 </body>
+
 </html>
