--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/logo.jpeg" type="image/x-icon"/>
 </head>
 
 <body>
