--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/logo.jpeg" type="image/x-icon"/>
+    <link rel="icon" href="images/logo.jpeg" type="image/x-icon" />
 </head>
 
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="dash" style="padding-top: 0%;">
+            <div class="dash" style="padding-top: 20px; height: 40px;">
                 <img src="images/view-dashboard-outline.png" alt="Dashboard" style="height: 30px;">
                 <h1 style="font-size: 1.7em; text-align:left;">Dashboard</h1>
             </div>
