--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
             </div>
         </div>
     </div>
+    <div
+        style="width: 100%; height: 6vh;;text-align: center;justify-content: center;align-content: center; color:white; background-color: #1F2937;">
+        Copyright &copy KBM 2024
+    </div>
 </body>
 
 </html>
